find route feature complete

--- a/app/src/main/res/layout/activity_find_route.xml
+++ b/app/src/main/res/layout/activity_find_route.xml
@@ -1,31 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MapFragment">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/travelMethod"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="32dp" />
     </androidx.appcompat.widget.Toolbar>
 
-
     <fragment
-        android:id="@+id/basicMap"
+        android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="match_parent"
+        tools:context=".FindRouteActivity" />
 
 
 </LinearLayout>
