--- a/app/src/main/res/navigation/navigation_b.xml
+++ b/app/src/main/res/navigation/navigation_b.xml
@@ -6,16 +6,21 @@
     app:startDestination="@id/mapFragment">
 
     <fragment
-        android:id="@+id/subjectFragment"
-        android:name="com.example.unimelborientation.SubjectFragment"
+        android:id="@+id/billFragment"
+        android:name="com.example.unimelborientation.BillFragment"
         android:label="Subjects"
-        tools:layout="@layout/subject_fragment" />
+        tools:layout="@layout/bill_fragment" />
     <fragment
         android:id="@+id/mapFragment"
         android:name="com.example.unimelborientation.MapFragment"
         android:label="UniMap"
         tools:layout="@layout/map_fragment" />
-<!--    <fragment-->
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.example.unimelborientation.ProfileFragment"
+        android:label="UniMap"
+        tools:layout="@layout/profile_fragment" />
+    <!--    <fragment-->
 <!--        android:id="@+id/myHomeFragment"-->
 <!--        android:name="com.example.unimelborientation.MyHomeFragment"-->
 <!--        android:label="Me"-->
