--- a/app/src/main/res/menu/main_subjectdetail.xml
+++ b/app/src/main/res/menu/main_subjectdetail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/Address_item"
-        android:title="Address"/>
+<!--    <item android:id="@+id/Address_item"-->
+<!--        android:title="Address"/>-->
 </menu>
