--- a/app/src/main/res/navigation/navigation_b.xml
+++ b/app/src/main/res/navigation/navigation_b.xml
@@ -16,7 +16,7 @@
         android:label="UniMap"
         tools:layout="@layout/map_fragment" />
     <fragment
-        android:id="@+id/profileFragment"
+        android:id="@+id/profilesFragment"
         android:name="com.example.unimelborientation.ProfileFragment"
         android:label="UniMap"
         tools:layout="@layout/profile_fragment" />
